[gd_scene format=3 uid="uid://bkk33gdy8nfux"]

[ext_resource type="Script" uid="uid://dcv3ln56nuqsg" path="res://old_scenes/game_over_screen.gd" id="1_iwahs"]
[ext_resource type="Theme" uid="uid://b6jk6oy0yh58i" path="res://old_scenes/complex_textured_button_theme.tres" id="2_jw6e5"]
[ext_resource type="Texture2D" uid="uid://bx3uyoep6wlt3" path="res://assets/ui/uipackSpace_sheet.png" id="3_wa2qn"]
[ext_resource type="AudioStream" uid="uid://csdwendp14tsm" path="res://assets/sfx/ui-select.ogg" id="4_cyfkl"]
[ext_resource type="AudioStream" uid="uid://bgkx1bxqrhduf" path="res://assets/sfx/ui-open.ogg" id="5_xx0b3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cyfkl"]
atlas = ExtResource("3_wa2qn")
region = Rect2(200, 200, 100, 100)

[sub_resource type="LabelSettings" id="LabelSettings_xx0b3"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5i0af"]
font_color = Color(0, 0, 0, 1)

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
layer = 10
script = ExtResource("1_iwahs")

[node name="Panel" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0.015306033, 0.07860183, 1)

[node name="GameOverLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -40.0
offset_right = 43.5
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"

[node name="restart" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -290.0
offset_top = 75.0
offset_right = -110.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jw6e5")

[node name="ButtonTexture" type="NinePatchRect" parent="Panel/restart"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -16.0
offset_right = 90.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_cyfkl")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="RestartLabel" type="Label" parent="Panel/restart"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -11.5
offset_right = 28.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart Game"
label_settings = SubResource("LabelSettings_xx0b3")

[node name="quit" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = 75.0
offset_right = 290.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jw6e5")

[node name="ButtonTexture" type="NinePatchRect" parent="Panel/quit"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -16.0
offset_right = 90.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_cyfkl")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="QuitLabel" type="Label" parent="Panel/quit"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit to Title Screeen"
label_settings = SubResource("LabelSettings_5i0af")

[node name="YouDiedLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -155.5
offset_top = 230.0
offset_right = 155.5
offset_bottom = 321.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 66
text = "YOU DIED"

[node name="HoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cyfkl")
bus = &"2_SFX"

[node name="ClickSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xx0b3")
bus = &"2_SFX"

[connection signal="mouse_entered" from="Panel/restart" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/restart" to="Panel" method="_on_restart_pressed"]
[connection signal="mouse_entered" from="Panel/quit" to="." method="_on_button_hover"]
[connection signal="pressed" from="Panel/quit" to="Panel" method="_on_quit_pressed"]
